--- a/ch02/public/index.html
+++ b/ch02/public/index.html
@@ -25,11 +25,7 @@
         <title>TodoList</title>
     </head>
     <body>
-        <div class="container">
-            <div id="main-content"></div>
-        </div>
-        
-        <div class="container">
+        <div class="container" id="main-content">
             
         </div>
         <!--
