--- a/ch04/public/index.html
+++ b/ch04/public/index.html
@@ -27,7 +27,7 @@
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
-    <div calss="container">
+    <div class="container">
         <div id="root"></div>
     </div>
     
