--- a/layout-chap7/task.html
+++ b/layout-chap7/task.html
@@ -31,7 +31,10 @@
             </div>
             <div class="row">
                 <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                    <div class="list-group"><a class="list-group-item active active" aria-current="true" href="/task">Task</a><a class="list-group-item " aria-current="false" href="/user">User</a></div>
+                    <div class="list-group">
+                        <a class="list-group-item active active" aria-current="true" href="/task">Task</a>
+                        <a class="list-group-item " aria-current="false" href="/user">User</a>
+                    </div>
                 </div>
                 <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
                     <div class="row">
